--- a/tpl/b/dic.address.html
+++ b/tpl/b/dic.address.html
@@ -1,3 +1,4 @@
 <div class="page-header">
 	<h1>数据维护<small><i class="icon-double-angle-right"></i> 地址管理 </small></h1>
 </div>
+<dynamic-form template="formTemplate" ng-model="formData" ng-submit="processForm()"></dynamic-form>
